--- a/style.css
+++ b/style.css
@@ -1,3 +1,143 @@
-h1 {
-  color: red;
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'PT Sans', sans-serif; */
+
+* {
+  box-sizing: border-box;
+}
+
+.sidePadding {
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+.btn {
+  display: inline-flex;
+  align-items: center;
+  padding: 8px 16px;
+  font-weight: 700;
+  border-radius: 30px;
+  border: 0;
+  margin-right: 10px;
+}
+
+.subHeading {
+  font-family: "PT Sans";
+  font-size: 24px;
+  color: #434343;
+  font-weight: 700;
+  line-height: 37px;
+  margin: 0;
+}
+
+.subtext {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  color: #434343;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  margin: 0;
+}
+
+.iconBox {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  background-color: #00acb4;
+  border-radius: 100%;
+}
+
+.icon {
+  padding-top: 12px;
+}
+
+/* **************************************************************** */
+
+.home1 {
+  background-color: #fff;
+  padding: 30px;
+}
+
+.home1Top {
+  display: flex;
+}
+
+.home1Heading {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 47px;
+  margin: 0 0 20px 0;
+  letter-spacing: 0.02em;
+
+  color: #434343;
+}
+
+.home1BtnBox {
+  display: flex;
+  align-items: center;
+}
+
+.home1BtnBox > * {
+  margin-right: 16px;
+}
+
+.home1Right {
+  border: 0.5px solid #434343;
+  border-radius: 8px;
+}
+
+.home1Right button {
+  width: 100%;
+  height: 55px;
+  background: #dc3636;
+  border: 0;
+  border-radius: 0 0 8px 8px;
+
+  font-family: "PT Sans";
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 28px;
+
+  text-align: center;
+  letter-spacing: 0.02em;
+
+  color: #ffffff;
+}
+
+.home1RightSub {
+  display: flex;
+}
+
+.home1RightSub > * {
+  width: 50%;
+  text-align: center;
+  padding: 16px;
+}
+
+.home1bottom {
+  display: flex;
+  margin-top: 30px;
+}
+
+.home1bottom > * {
+  display: flex;
+  border-right: 0.8px solid #828282;
+  width: 33%;
+}
+
+.home1bottom > * .icon {
+  padding: 12px 20px;
+  color: #dc3636;
+}
+
+/* **************************************************************** */
+
+.home2 {
+}
+/* **************************************************************** */
+
+.home3 {
 }
