--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ font-family: 'PT Sans', sans-serif; */
   box-sizing: border-box;
 }
 
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .sidePadding {
   padding-left: 150px;
   padding-right: 150px;
@@ -203,4 +208,24 @@ font-family: 'PT Sans', sans-serif; */
 /* **************************************************************** */
 
 .home3 {
+  padding: 36px 80px;
+  background-image: url("image/home2Bottom.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home3Container {
+  display: flex;
+  padding: 45px 20px;
+  background: #ffffff;
+  box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15),
+    0px 1px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 16px;
+}
+
+.home3 .subtext {
+  font-size: 24px;
+  text-align: center;
+
+  line-height: 34px;
 }
