--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* font-family: 'Montserrat', sans-serif;
+/* font-family: 'Inter', sans-serif;
+font-family: 'Montserrat', sans-serif;
 font-family: 'PT Sans', sans-serif; */
 
 * {
@@ -55,6 +56,93 @@ body {
 
 .icon {
   padding-top: 12px;
+}
+
+/* ******************************************************************************* */
+
+.navbar {
+  padding: 30px 120px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  background-color: #d9d9d9;
+  display: flex;
+  width: 190px;
+  height: 90px;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo p {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 39px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #000000;
+  margin: 0;
+}
+
+.navbarRight {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  max-width: 800px;
+}
+
+.navbarRightTop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px 0;
+
+  width: 270px;
+  min-width: 180px;
+  margin-left: auto;
+}
+
+.navbarRightTop > * {
+  margin: 0;
+  color: #000000;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+
+  letter-spacing: 0.02em;
+
+  display: flex;
+  align-items: center;
+}
+
+.navbarSearchInput {
+  outline: none;
+  border: 0;
+  width: 60px;
+}
+
+.navbarRightBottom {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbarRightBottom a {
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.navbarRightBottom .icon {
+  display: none;
+  padding: 14px 0;
+  color: #434343;
 }
 
 /* **************************************************************** */
@@ -386,6 +474,35 @@ body {
 }
 
 @media only screen and (max-width: 1200px) {
+  .navbar {
+    padding: 30px 110px;
+  }
+
+  /* ****************************************** */
+
+  .navbarRightBottom .navLink {
+    display: none;
+  }
+
+  .navbarRightBottom a.icon {
+    display: block;
+    margin-left: auto;
+    margin-top: 18px;
+  }
+
+  .navbarRightBottom.responsive {
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+  }
+
+  .navbarRightBottom.responsive .navLink {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  /* *************************************** */
+
   .sidePadding {
     padding-left: 130px;
     padding-right: 130px;
@@ -415,6 +532,10 @@ body {
 }
 
 @media only screen and (max-width: 992px) {
+  .navbar {
+    padding: 30px 80px;
+  }
+
   .sidePadding {
     padding-left: 100px;
     padding-right: 100px;
@@ -469,6 +590,10 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  .navbar {
+    padding: 30px 60px;
+  }
+
   .sidePadding {
     padding-left: 80px;
     padding-right: 80px;
@@ -516,6 +641,10 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  .navbar {
+    padding: 30px 30px;
+  }
+
   .sidePadding {
     padding-left: 50px;
     padding-right: 50px;
@@ -554,6 +683,18 @@ body {
     min-width: 280px;
     max-width: 380px;
     width: 100%;
+  }
+
+  .navbarRightTop {
+    width: 160px;
+  }
+
+  .navbarRightTop p:nth-child(2) > *:nth-child(2) {
+    display: none;
+  }
+
+  .navbarRightTop p:nth-child(3) > *:nth-child(2) {
+    display: none;
   }
 }
 
